--- a/AutoCmdb/templates/host/base.html
+++ b/AutoCmdb/templates/host/base.html
@@ -20,34 +20,26 @@
 
     <ul class="nav nav-sidebar">
 
-        <li >
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"
+
+
+
+        <li>
+            <a href="#hostSubmenu" data-toggle="collapse" aria-expanded="false"
                class="dropdown-toggle collapsed">
-                <span>Home</span>
+                <span>主機管理</span>
                 <span style="float:right"><i class="fa fa-angle-right"></i></span></a>
 
-            <ul class="list-unstyled collapse" id="homeSubmenu" style="">
-                <li>
-                    <a href="#">Home 1</a>
-                </li>
-                <li>
-                    <a href="#">Home 2</a>
-                </li>
-                <li>
-                    <a href="#">Home 3</a>
-                </li>
+            <ul class="list-unstyled collapse" id="hostSubmenu" style="">
+                <li {% if request.path == host %}class="active"{% endif %}><a href={{ host }}>主機列表</a></li>
+                <li {% if request.path == host_input %}class="active"{% endif %}><a href={{ host_input }}>匯入</a></li>
+                <li {% if request.path == host_output %}class="active"{% endif %}><a href={{ host_output }}>匯出</a></li>
             </ul>
         </li>
-
-        <li {% if request.path == host %}class="active"{% endif %}><a href={{ host }}>主機管理</a></li>
-        <li {% if request.path == host_input %}class="active"{% endif %}><a href={{ host_input }}>匯入</a></li>
-        <li {% if request.path == host_output %}class="active"{% endif %}><a href={{ host_output }}>匯出</a></li>
-
 
     </ul>
 
     <ul class="nav nav-sidebar">
-        <li {% if request.path == location %}class="active"{% endif %}><a href={{ location }}>位置</a></li>
+        <li {% if request.path == location %}class="active"{% endif %}><a href={{ location }}>位置列表</a></li>
         <!---
         <li><a href='#'>IP電話管理</a></li>
         <li><a href='#'>交換器管理</a></li>
@@ -72,13 +64,12 @@
 {% endblock %}
 
 
-
 {% block base-js %}
 
-<script>
+    <script>
 
 
-
-
-</script>
+    </script>
 {% endblock %}
+
+
