--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -330,7 +330,7 @@
         });
 
         $(document).ready(function () {
-            $('.dropdown-toggle').dropdown();
+            //$('.dropdown-toggle').dropdown();
             $('#datebox input').datepicker(
                 {
                     language: 'zh-TW',
